# HulaLoop

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .jenkinsfile  CMakeLists.txt  CPPLINT.CFG  LICENSE  README.md  apply-style.sh  deviceNames.cpp  install.sh  package-lock.json  package.json  project-backlog.md  project-charter.md  project-name.md  win-coverage.ps1
cmake/: FindJACK.cmake  FindOpenSSL.cmake  FindPortAudio.cmake  FindSndFile.cmake  HulaInstall.cmake  HulaVersion.h.in  MoveDLLsToTest.cmake  MoveFilesToTest.cmake  MovePortAudioDLL.cmake  Qt5.cmake  Testing.cmake  Translation.cmake  Utility.cmake
docs/: Doxyfile  Makefile  course-documents.md  design-document.md  makeMainMan.sh  project-backlog.md  project-charter.md  project-name.md  sprint-1-planning.md  sprint-one-planning.md  sprint-one-retrospective.md  sprint-three-planning.md  sprint-two-planning.md  sprint-two-retrospective.md
docs/doxygen/: DoxygenLayout.xml  extra-style.css  mainpage.dox  memory-management.dox
docs/read-the-docs/source/: conf.py  documentation.rst  help.rst  index.rst  license.rst  readme.md
docs/read-the-docs/source/_static/: custom.css  test.html
examples/: CMakeLists.txt  SimplePlayback.cpp  SimpleRecord.cpp
res/: eula.txt
res/installer/: hulaloop.desktop  hulaloop.desktop.in  ifwscript.qs
res/logo/: hulaloop-logo.icns
res/translations/: CMakeLists.txt  README.md  hulaloop_en.ts  hulaloop_es.ts  hulaloop_fr.ts  hulaloop_hi.ts  hulaloop_pl.ts
src/audio/: CMakeLists.txt  Controller.cpp  Controller.h  Device.cpp  Device.h  HulaAudioError.h  HulaAudioSettings.cpp  HulaRingBuffer.cpp  ICallback.h  LinuxAudio.cpp  LinuxAudio.h  OSAudio.cpp  OSAudio.h  OSXAudio.cpp  OSXAudio.h  OSXRingBuffer.h  PaRingBuffer.c  WindowsAudio.cpp  WindowsAudio.h  hlaudio.pc.in  iCallback.h  main.cpp
src/audio/OSXDaemon/: CMakeLists.txt  JackBridge.cpp  JackBridge.h  JackClient.cpp  JackClient.h  JackClient.hpp  Makefile  OSXDaemon.cpp  OSXDaemon.h  README.md  jackClient.cpp  jackClient.hpp  main.cpp
src/audio/OSXDriver/: README.md  install.sh
src/audio/OSXDriver/HulaLoop.xcodeproj/: project.pbxproj
src/audio/OSXDriver/HulaLoop.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/audio/OSXDriver/HulaLoop.xcodeproj/xcshareddata/xcschemes/: HulaLoop.xcscheme
src/audio/OSXDriver/HulaLoop/Plug-In/: JackBridge.h  SA_Device.cpp  SA_Device.h  SA_Object.cpp  SA_Object.h  SA_PlugIn-Info.plist  SA_PlugIn.cpp  SA_PlugIn.h
src/audio/OSXDriver/HulaLoop/Plug-In/Resources/English.lproj/: Localizable.strings
src/audio/OSXDriver/HulaLoopHAL.xcodeproj/: project.pbxproj
src/audio/OSXDriver/HulaLoopHAL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/audio/OSXDriver/HulaLoopHAL.xcodeproj/project.xcworkspace/xcuserdata/symboxtra.xcuserdatad/: UserInterfaceState.xcuserstate
src/audio/OSXDriver/HulaLoopHAL.xcodeproj/xcshareddata/xcschemes/: HulaLoopHAL.xcscheme
src/audio/OSXDriver/PublicUtility/: CACFArray.cpp  CACFArray.h  CACFDictionary.cpp  CACFDictionary.h  CACFNumber.cpp  CACFNumber.h  CACFObject.h  CACFString.cpp  CACFString.h  CADebugMacros.cpp  CADebugMacros.h  CADebugPrintf.cpp  CADebugPrintf.h  CADebugger.cpp  CADebugger.h  CADispatchQueue.cpp  CADispatchQueue.h  CAException.h  CAGuard.cpp  CAGuard.h  CAHostTimeBase.cpp  CAHostTimeBase.h  CAMutex.cpp  CAMutex.h  CAVolumeCurve.cpp  CAVolumeCurve.h
src/audio/include/hlaudio/: hlaudio.h
src/audio/include/hlaudio/internal/: Controller.h  Device.h  HulaAudioError.h  HulaAudioSettings.h  HulaRingBuffer.h  ICallback.h  OSAudio.h  Semaphore.h
src/control/: CMakeLists.txt  Export.cpp  HulaSettings.cpp  Playback.cpp  Record.cpp  Record.h  Transport.cpp  transport.cpp  transport.h
src/control/include/hlcontrol/: hlcontrol.h
src/control/include/hlcontrol/internal/: Export.h  HulaControlError.h  HulaSettings.h  Playback.h  Record.h  Transport.h
src/core/: Device.cpp
src/launcher/: CMakeLists.txt  Updater.cpp  Updater.h  main.cpp  qml.qrc  updater.h
src/launcher/qml/: main.qml
src/node-addon/: CMakeLists.txt  hulaloop-addon.cpp  streaming-worker.h
src/os/: Device.h  OSAudio.cpp  WindowsAudio.cpp  WindowsAudio.h
src/test/: LinuxAudioTest.sh  TestAudioOutput.cpp  TestCLIArgs.cpp  TestCTInterface.cpp  TestCallback.h  TestController.cpp  TestGUI.cpp  TestHulaRingBuffer.cpp  TestInteractiveCLI.cpp  TestOSAudio.cpp  TestOSXAudio.cpp  TestRecord.cpp  TestSimpleMath.cpp  TestTransport.cpp  TestUpdater.cpp  TestWindowsAudio.cpp
src/ui/: CMakeLists.txt  filesave.cpp  filesave.h  main.cpp  qml.qrc  qmlbridge.cpp  qmlbridge.h
src/ui/cli/: CLIArgs.h  CLICommands.h  CLICommon.h  CMakeLists.txt  HulaArgs.h  HulaCliCommon.h  HulaCommands.h  HulaInteractiveCli.cpp  HulaInteractiveCli.h  HulaParseArgs.h  InteractiveCLI.cpp  InteractiveCLI.h  main.cpp
src/ui/gui/: CMakeLists.txt  FFTRealPair.cpp  FFTRealPair.h  FftRealPair.cpp  QMLBridge.cpp  QMLBridge.h  SystemTrayIcon.cpp  SystemTrayIcon.h  main.cpp  qml.qrc  style.h  switch.cpp  switch.h
src/ui/gui/fonts/: Icon.min.js
src/ui/gui/qml/: BottomRectangle.qml  ButtonPanel.qml  CircleVis.qml  CircleVisualizer.qml  DynamicLine.qml  LineVisualizer.qml  PlaybackMarker.qml  Timeline.qml  Visualizer.qml  main.qml
src/ui/qml/: ButtonPanel.qml  Visualizer.qml  main.qml
